--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,6 +5,38 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LessonsWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid/>
+        Title="Калькулятор" Height="350" Width="500">
+    <Grid x:Name="MainRot" Background="White">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+
+        </Grid.ColumnDefinitions>
+        <TextBlock Grid.Row="0" Grid.Column="0" Text="" Grid.ColumnSpan="4" x:Name="textLabel1"/>
+        <Button Grid.Column="0" Grid.Row="1">1</Button>
+        <Button Grid.Column="1" Grid.Row="1">2</Button>
+        <Button Grid.Column="2" Grid.Row="1">3</Button>
+        <Button Grid.Column="0" Grid.Row="2">4</Button>
+        <Button Grid.Column="1" Grid.Row="2">5</Button>
+        <Button Grid.Column="2" Grid.Row="2">6</Button>
+        <Button Grid.Column="0" Grid.Row="3">7</Button>
+        <Button Grid.Column="1" Grid.Row="3">8</Button>
+        <Button Grid.Column="2" Grid.Row="3">9</Button>
+        <Button Grid.Column="0" Grid.Row="4">0</Button>
+        <Button Grid.Column="1" Grid.Row="4">=</Button>
+        <Button Grid.Column="2" Grid.Row="4">AC</Button>
+        <Button Grid.Column="3" Grid.Row="1">+</Button>
+        <Button Grid.Column="3" Grid.Row="2">-</Button>
+        <Button Grid.Column="3" Grid.Row="3">*</Button>
+        <Button Grid.Column="3" Grid.Row="4">/</Button>
+    </Grid>
 </Window>
